# learnSIMD

./: ALGORITHM_DEEP_DIVE.md  CMakeLists.txt  PERFORMANCE_REPORT.md  README.md
reports/: CROP_PERFORMANCE_REPORT.md  NORM_PERFORMANCE_REPORT.md  RESIZE_PERFORMANCE_REPORT.md
src/: cpu_crop.cpp  cpu_crop.h  cpu_norm.cpp  cpu_norm.h  cpu_simd_resize.cpp  cpu_simd_resize.h  cuda_crop.cu  cuda_crop.h  cuda_norm.cu  cuda_norm.h  cuda_resize.cu  cuda_resize.h  main.cpp
